theme: fix spacing around webring and comments

--- a/themes/smol/assets/scss/main.scss
+++ b/themes/smol/assets/scss/main.scss
@@ -762,8 +762,10 @@ dd {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 0.5rem;
 
     h3 {
+      margin-top: 0.5rem;
       margin-bottom: 0.5rem;
     }
 
